WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122653
The content of the DOM panel for iframes is not updated until the "onload" event
https://bugs.webkit.org/show_bug.cgi?id=122653
Summary
The content of the DOM panel for iframes is not updated until the "onload" event
Alexandru Chiculita
Reported
2013-10-11 09:56:44 PDT
If you open a page with an iframe that takes longer time to load, the webinspector is not going to update the content of the frame until the frame is fully loaded. The problem is that iframe elements are ubound and bound only on the "loadEventFired" event.
Attachments
Patch V1
(10.96 KB, patch)
2013-10-14 14:57 PDT
,
Alexandru Chiculita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-10-11 09:56:52 PDT
<
rdar://problem/15208386
>
Alexandru Chiculita
Comment 2
2013-10-14 14:57:26 PDT
Created
attachment 214193
[details]
Patch V1
WebKit Commit Bot
Comment 3
2013-10-14 16:07:03 PDT
Comment on
attachment 214193
[details]
Patch V1 Clearing flags on attachment: 214193 Committed
r157425
: <
http://trac.webkit.org/changeset/157425
>
WebKit Commit Bot
Comment 4
2013-10-14 16:07:05 PDT
All reviewed patches have been landed. Closing bug.
Joseph Pecoraro
Comment 5
2013-10-14 16:14:45 PDT
Comment on
attachment 214193
[details]
Patch V1 View in context:
https://bugs.webkit.org/attachment.cgi?id=214193&action=review
Nice! I realize this has landed, but some nits that don't need to be addressed.
> LayoutTests/http/tests/inspector-protocol/resources/slow-test-page.html:4 > + // Having a script tag so that we force the creationg of a scripting context.
Typo: "creationg"
> LayoutTests/http/tests/inspector-protocol/resources/slow-test-page.html:11 > + <img src="
http://localhost:8000/history/resources/slow-image.php
" />
Nit: No need for /> closing tag for self-closing tags in HTML
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug